--- a/ThanhToan.html
+++ b/ThanhToan.html
@@ -183,7 +183,7 @@
     <h4>KIỂM TRA LẠI SẢN PHẨM</h4>
     <footer>
       <div class="nhap3">
-        <a href="#"><img src="img/tra-hoa-duong-phen.png" alt="Ảnh" class="image2"></a>
+        <a href="#"><img src="tra-hoa-duong-phen.png" alt="Ảnh" class="image2"></a>
         <h3>Trà Hoa Đường Phèn&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 69.000đ&nbsp&nbsp&nbsp&nbsp&nbsp&nbspx1&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp69.000đ</h3>
       </footer>
   </div>
