--- a/sanpham1.html
+++ b/sanpham1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<img src="img/logo.png" alt="Ảnh" class="image1">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+		<img src="logo.png" alt="Ảnh" class="image1">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 		  <div class="search">
 			  <input type="text" placeholder="Tìm kiếm sản phẩm mong muốn...">
 			  <button><i class="fas fa-search"></i></button>
@@ -23,7 +23,7 @@
 		<a href="index.html" class="nhap2"><i class="fas fa-chevron-left"></i><i class="fas fa-chevron-left"></i><b>&nbspQuay Lại Trang Chủ</b> </a>	
 		<div class="container">
 		 <div class="product">
-			<img src="img/tra-hoa-duong-phen.png" alt="Product" class="product-image">
+			<img src="tra-hoa-duong-phen.png" alt="Product" class="product-image">
 			<h1 class="product-title">Trà Hoa Đường Phèn</h1>
 			<p class="product-price">69,000 vnd</p>
 			<p class="product-description">Trà Hoa Cúc Đường Phèn là trà hoa cúc khô nguyên bông được bọc trong đường phèn. Rất tốt cho sức khỏe, dễ pha dễ uống. Thơm ngon.</p>
@@ -35,22 +35,22 @@
 	<div class="container1">
 		<div class="product-row1">
 			<div class="product1">
-				<img src="img/tra-cuc-trang-ky-tu.png" alt="Product" class="product-image1">
+				<img src="tra-cuc-trang-ky-tu.png" alt="Product" class="product-image1">
 				<a href="#"><h2 class="product-title1">Trà Cúc Trắng Kỷ Tử</h2></a>
 				<p class="product-price1">69,000 vnd</p>
 			</div>
 			<div class="product1">
-				<img src="img/tra-gau-luc-dau-den.png" alt="Product" class="product-image1">
+				<img src="tra-gau-luc-dau-den.png" alt="Product" class="product-image1">
 				<a href="#"><h2 class="product-title1">Trà Gạo Lức Đậu Đen</h2></a>
 				<p class="product-price1">69,000 vnd</p>
 			</div>
 			<div class="product1">
-				<img src="img/tra-dau-tam.png" alt="Product" class="product-image1">
+				<img src="tra-dau-tam.png" alt="Product" class="product-image1">
 				<a href="#"><h2 class="product-title1">Trà Dâu Tằm</h2></a>
 				<p class="product-price1">69,000 vnd</p>
 			</div>
 			<div class="product1">
-				<img src="img/tra-dong-trung-tu-vi.png" alt="Product" class="product-image1">
+				<img src="tra-dong-trung-tu-vi.png" alt="Product" class="product-image1">
 				<a href="#"><h2 class="product-title1">Trà Đông Trùng Tứ Vị</h2></a>
 				<p class="product-price1">69,000 vnd</p>
 			</div>
