--- a/thanhcong.html
+++ b/thanhcong.html
@@ -44,7 +44,7 @@
 <body>
 	<div class="container">
 		<h1>Thanh toán thành công</h1>
-        <a href="#"><img src="img/thanks.jpg" alt="Ảnh" class="image"></a>
+        <a href="#"><img src="thanks.jpg" alt="Ảnh" class="image"></a>
         <h3>Cảm ơn bạn đã mua hàng!</h3>
         <form action="index.html">
             <button onclick="window.location.href = 'index.html';">Tiếp tục mua hàng</button>
