--- a/login.html
+++ b/login.html
@@ -28,10 +28,12 @@
             <div class="register-link">
                 <p>Don't have an account?<a href="#">Register</a></p>
             </div>
+            <div class="register-link">
+                <p><ion-icon name="return-down-back"></ion-icon>&nbsp&nbsp<a href="#">Return to Homepage</a></p>
+            </div>
         </form>
-
     </div>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 </body>
