--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
                 <p>Don't have an account?<a href="#">Register</a></p>
             </div>
             <div class="register-link">
-                <p><ion-icon name="return-down-back"></ion-icon>&nbsp&nbsp<a href="#">Return to Homepage</a></p>
+                <p><ion-icon name="return-down-back"></ion-icon>&nbsp&nbsp<a href="index.html">Return to Homepage</a></p>
             </div>
         </form>
     </div>
