--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
           <table class="hidden-table">
             <thead>
               <tr>
-                <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
+                <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                </th>
                 <th>
                     <h2>ĐỘI NGŨ NHÂN VIÊN TRÀN ĐẦY NHIỆT <br> HUYẾT</h2>
                     <p>Trong suốt quá trình hoạt động và phát triển, đội ngũ quản lý và 
