change and add something

--- a/index.html
+++ b/index.html
@@ -29,14 +29,11 @@
     </table>
 		<nav>
 			<ul>
-				<li><a href="#">TRANG CHỦ</a></li>
-				<li><a href="#">CÀ PHÊ</a></li>
-				<li><a href="#">TRÀ</a></li>
-				<li><a href="#">THỨC UỐNG</a></li>
-        <li><a href="#">SẢN PHẨM</a></li>
-        <li><a href="#">KHUYẾN MÃI</a></li>
-        <li><a href="#">VỀ CHÚNG TÔI</a></li>
-        <li><a href="#">THẺ</a></li>
+				<li><a href="#"><b>TRANG CHỦ&nbsp&nbsp</b></a></li>
+				<li><a href="#"><b>THỨC UỐNG&nbsp&nbsp </b></a></li>
+        <li><a href="#"><b>SẢN PHẨM&nbsp&nbsp</b></a></li>
+        <li><a href="#"><b>KHUYẾN MÃI&nbsp&nbsp</b></a></li>
+        <li><a href="#"><b>VỀ CHÚNG TÔI</b></a></li>
         <li><a href="#"><div class="search-icon"><i class="fas fa-search"></i></div></a></li>
 			</ul>
 		</nav>
