--- a/sanpham1.html
+++ b/sanpham1.html
@@ -14,9 +14,7 @@
 			  <button><i class="fas fa-search"></i></button>
 		  </div>
 		<ul>
-		  <li><a href="#">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<i class="fas fa-bell"></i>Thông báo&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a></li>
-		  <li><a href="#"><i class="fas fa-shopping-cart"></i>Giỏ hàng&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a></li>
-		  <li><a href="#"><i class="fas fa-user"></i>Tài khoản&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a></li>
+		  <li><a href="#">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<i class="fas fa-shopping-cart"></i>Giỏ hàng</a></li>
 		</ul>
 		</header>
 		<br><br>
@@ -27,7 +25,7 @@
 			<h1 class="product-title">Trà Hoa Đường Phèn</h1>
 			<p class="product-price">69,000 vnd</p>
 			<p class="product-description">Trà Hoa Cúc Đường Phèn là trà hoa cúc khô nguyên bông được bọc trong đường phèn. Rất tốt cho sức khỏe, dễ pha dễ uống. Thơm ngon.</p>
-			<form action="ThanhToan.html">
+			<form action="pay.html">
 				<button class="add-to-cart">Mua ngay</button>
 			</form>
 		</div>
