--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
             </div>
             <button type="submit">Login</button>
             <div class="register-link">
-                <p>Don't have an account?<a href="#">Register</a></p>
+                <p>Don't have an account?<a href="register.html">Register</a></p>
             </div>
             <div class="register-link">
                 <p><ion-icon name="return-down-back"></ion-icon>&nbsp&nbsp<a href="index.html">Return to Homepage</a></p>
