--- a/register.html
+++ b/register.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style2.css">
     <title>Register</title>
 </head>
-<body>
+<body class="preloading">
+    <div class="loading">
+        <img src="loader.gif">
+    </div>
     <div class="wrapper">
         <form action="">
             <h2>Register</h2>
@@ -77,6 +80,12 @@
     </div>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(window).on('load', function(event){
+        $('body').removeClass('preloading');
+        $('.loading').delay(500).fadeOut('fast');
+    });
+</script>
 </body>
 </html>
