--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </table>
 		<nav>
 			<ul>
-				<li><a href="#"><b>TRANG CHỦ&nbsp&nbsp</b></a></li>
+				<li><a href="index.html"><b>TRANG CHỦ&nbsp&nbsp</b></a></li>
 				<li><a href="#"><b>THỨC UỐNG&nbsp&nbsp </b></a></li>
-        <li><a href="#"><b>SẢN PHẨM&nbsp&nbsp</b></a></li>
+        <li><a href="menu.html"><b>SẢN PHẨM&nbsp&nbsp</b></a></li>
         <li><a href="#"><b>KHUYẾN MÃI&nbsp&nbsp</b></a></li>
         <li><a href="#"><b>VỀ CHÚNG TÔI</b></a></li>
         <li><a href="#"><div class="search-icon"><i class="fas fa-search"></i></div></a></li>
@@ -114,7 +114,7 @@
           <table class="hidden-table">
             <thead>
               <tr>
-                <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
+                <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
                 <th>
                     <p id="call"><b>+Trụ sở chính:</b> Công ty Cổ Phần An Yên Heritage - ĐKKD: 0316 871719<br>
                         do sở KHĐT TPHCM cấp lần đầu ngày 21/05/2021<br><br>
