--- a/sanpham1.html
+++ b/sanpham1.html
@@ -8,17 +8,18 @@
 </head>
 <body>
 	<header>
-		<img src="logo.png" alt="Ảnh" class="image1">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+		<img src="logo.png" alt="Ảnh" class="image1">
 		  <div class="search">
 			  <input type="text" placeholder="Tìm kiếm sản phẩm mong muốn...">
 			  <button><i class="fas fa-search"></i></button>
 		  </div>
 		<ul>
-		  <li><a href="#">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<i class="fas fa-shopping-cart"></i>Giỏ hàng</a></li>
+			<li>&nbsp&nbsp&nbsp</li>
+		  <li><button type="submit" class="gio">Giỏ hàng <img src="trolley-icon.png" alt="Ảnh" class="image4"></button></li>
 		</ul>
 		</header>
 		<br><br>
-		<a href="index.html" class="nhap2"><i class="fas fa-chevron-left"></i><i class="fas fa-chevron-left"></i><b>&nbspQuay Lại Trang Chủ</b> </a>	
+		
 		<div class="container">
 		 <div class="product">
 			<img src="tra-hoa-duong-phen.png" alt="Product" class="product-image">
@@ -54,11 +55,13 @@
 			</div>
 		</div>
 	</div>
+	<a href="index.html" class="nhap2"><i class="fas fa-chevron-left"></i><i class="fas fa-chevron-left"></i><b>Quay Lại Trang Chủ</b> </a>	
+	<br><br>
 	<footer>
 		<table class="hidden-table">
 		  <thead>
 			<tr>
-			  <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
+			  <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
 			  <th>
 				  <p id="call"><b>+Trụ sở chính:</b> Công ty Cổ Phần An Yên - ĐKKD: 0316 871719<br>
 					  do sở KHĐT TPHCM cấp lần đầu ngày 21/05/2021<br><br>
