--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         <table class="hidden-table">
             <thead>
               <tr>
-                <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
+                <th></th>
 
                 <th><img src="content-1.png" alt="Ảnh" class="image2"></th>
-                <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
+                <th>&nbsp&nbsp&nbsp&nbsp</th>
 
                 <th>
                     <h2>TỪ NHỮNG MẦM TRÀ, CHÚNG TÔI TẠO RA NIỀM ĐAM MÊ</h2>
@@ -82,11 +82,13 @@
                 Chúng tôi tin rằng từng sản phẩm trà và cà phê sẽ càng thêm hảo hạng khi được tạo 
                 ra từ sự phấn đấu không ngừng cùng niềm đam mê. Và chính kết nối dựa trên niềm tin, 
                 sự trung thực và tin yêu sẽ góp phần mang đến những nét đẹp trong văn hóa thưởng trà và cà phê ngày càng bay cao, vươn xa. </p>
+                
                 <form action="#">
                     <button class="csw-btn-button" type="submit">Xem thêm</button>
                 </form>
                 </th>
               </tr>
+              <th>&nbsp&nbsp&nbsp&nbsp</th>
             </thead>
           </table>
           <br><br><br><br>
@@ -96,7 +98,7 @@
                 <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                 </th>
                 <th>
-                    <h2>ĐỘI NGŨ NHÂN VIÊN TRÀN ĐẦY NHIỆT <br> HUYẾT</h2>
+                    <h2>ĐỘI NGŨ NHÂN VIÊN TRÀN ĐẦY NHIỆT HUYẾT</h2>
                     <p>Trong suốt quá trình hoạt động và phát triển, đội ngũ quản lý và 
                     nhân viên <br> của An Yên Tea, qua bao thế hệ, đã cùng nhau xây dựng, 
                     nuôi <br> dưỡng niềm đam mê dành cho trà và cà phê với mong muốn được thử thách<br> bản thân 
