--- a/loginforadmin.html
+++ b/loginforadmin.html
@@ -13,7 +13,7 @@
     </div>
     <div class="wrapper">
         <form action="">
-            <h2>Login</h2>
+            <h2>Login For Admin</h2>
             <div class="input-box">
                 <span class="icon"><ion-icon name="person"></ion-icon></span>
                 <input type="text" placeholder="Username"
@@ -27,13 +27,10 @@
             <div class="forgot-pass">
                 <a href="#">Forgot Password?</a>
             </div>
-            <button type="submit">Login</button>
-            <div class="register-link">
-                <p>Don't have an account?<a href="register.html">Register</a></p>
-            </div>
+            <button type="submit">Login </button>
+
             <div class="register-link">
                 <p><ion-icon name="return-down-back"></ion-icon>&nbsp&nbsp<a href="index.html">Return to Homepage</a></p>
-                <p><ion-icon name="trending-up-outline"></ion-icon>&nbsp&nbsp<a href="loginforadmin.html">I'm an admin</a></p>
             </div>
         </form>
     </div>
