--- a/thanhcong.html
+++ b/thanhcong.html
@@ -39,9 +39,32 @@
 		button:hover {
 			background-color: #4cae4c;
 		}
+		.loading{
+  width: 100%;
+  height: 100%;
+  background: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100000000;
+  display: block;
+  overflow: hidden; /*mờ màn hình*/
+}
+.loading img{
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -75px;
+  margin-left: -75px;
+}
 	</style>
 </head>
-<body>
+<body class="preloading">
+	<div class="loading">
+		<img src="loader.gif">
+	</div>
 	<div class="container">
 		<h1>Thanh toán thành công</h1>
         <a href="#"><img src="thanks.jpg" alt="Ảnh" class="image"></a>
@@ -50,5 +73,12 @@
             <button onclick="window.location.href = 'index.html';">Tiếp tục mua hàng</button>
         </form>
 	</div>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    $(window).on('load', function(event){
+        $('body').removeClass('preloading');
+        $('.loading').delay(1300).fadeOut('fast');
+    });
+  </script>
 </body>
 </html>
