--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <table class="hidden-table">
             <thead>
               <tr>
-                <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
+                <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
                 <th>
                     <p id="call"><b>+Trụ sở chính:</b> Công ty Cổ Phần An Yên Heritage - ĐKKD: 0316 871719<br>
                         do sở KHĐT TPHCM cấp lần đầu ngày 21/05/2021<br><br>
