--- a/loginforadmin.html
+++ b/loginforadmin.html
@@ -12,7 +12,7 @@
         <img src="loader.gif">
     </div>
     <div class="wrapper">
-        <form action="">
+        <form action="Admin.html">
             <h2>Login For Admin</h2>
             <div class="input-box">
                 <span class="icon"><ion-icon name="person"></ion-icon></span>
@@ -27,6 +27,7 @@
             <div class="forgot-pass">
                 <a href="#">Forgot Password?</a>
             </div>
+            
             <button type="submit">Login </button>
 
             <div class="register-link">
