--- a/sanpham1.html
+++ b/sanpham1.html
@@ -90,6 +90,9 @@
 		  </thead>
 		</table>
 	  </footer>
+	  <div id="backtop">
+		<i class="fas fa-chevron-up fa-2x"></i>
+	  </div>
 	  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
     $(window).on('load', function(event){
@@ -97,5 +100,19 @@
         $('.loading').delay(1300).fadeOut('fast');
     });
   </script>
+  <script>
+    $(document).ready(function(){
+      $(window).scroll(function(){
+        if($(this).scrollTop()){
+          $('#backtop').fadeIn();
+        }else{
+          $('#backtop').fadeOut();
+        }
+      });
+      $("#backtop").click(function(){
+        $('html, body').animate({scrollTop: 0}, 500)
+      });
+    });
+</script>
 </body>
 </html>
